# kocherga

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  kocherga.hpp  kocherga_popcop.hpp  kocherga_uavcan.hpp  kocherga_ymodem.hpp  populate_app_descriptor.py  sonar-project.properties
.github/workflows/: main.yml
docs/: state_machine.dia
kocherga/: kocherga.hpp  kocherga_can.hpp  kocherga_serial.hpp
kocherga/protocols/: popcop.hpp  ymodem.hpp
test/: CMakeLists.txt  images.hpp  mocks.hpp  piped_process.hpp  test.cpp  test_core.cpp  test_main.cpp  test_mocks.cpp  test_piped_process.cpp  test_popcop.cpp  test_uavcan.cpp  test_uavcan_python.cpp  test_util.cpp  test_ymodem.cpp  util.hpp
test/popcop_tester/: main.py
test/populate_app_descriptor/: test.sh
test/uavcan_tester/: main.py  uavcan_tester.py
tests/: .clang-tidy  CMakeLists.txt  test_core.cpp
tests/integration/: .gitignore  CMakeLists.txt  test.orc.yaml
tests/integration/bootloader/: main.cpp
tests/integration/validator/: can.orc.yaml  manual_v0.orc.yaml  serial.orc.yaml  validate.sh
tests/native/: CMakeLists.txt  images.hpp  mock.hpp  test_app_data.cpp  test_app_locator.cpp  test_core.cpp  test_main.cpp  test_misc.cpp  test_presenter.cpp  test_util.cpp  util.hpp
tests/native/images/: bad-le-crc-x3.img  bad-le-short.img  good-le-3rd-entry-5.6.3333333333333333.60cc964568bfb6b0,dirty.img  good-le-simple-3.1.badc0ffee0ddf00d.be8cb17ed02e7a88,debug.img
tests/native/serial/: test_stream.cpp
tests/tools/: .gitignore  test.sh
tests/unit/: CMakeLists.txt  empty_translation_unit.cpp  test_app_locator.cpp  test_core.cpp  test_main.cpp  test_misc.cpp  test_presenter.cpp  test_util.cpp  util.hpp
tests/unit/can/: test_misc.cpp  test_node.cpp
tests/unit/serial/: test_misc.cpp  test_node.cpp  test_stream.cpp
tests/util/: util.hpp
tools/: kocherga_image.py  populate_app_descriptor.py  pyproject.toml
